--- a/.eslintrc
+++ b/.eslintrc
@@ -32,11 +32,11 @@
     "env": {
         "es6": true,
         "browser": true,
-        "node": true
+        "node": true,
+	  	"mocha": true
     },
     "globals": {
-        "describe": true,
-        "it": true
+
     },
     "extends": "airbnb/base"
 }
