--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "npm run compile",
-    "test": "npm run compile && mocha --ignore-leaks --compilers js:babel-register",
+    "test": "npm run compile && mocha --require @babel/register",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile",
     "watch": "npm-scripts-watcher"
@@ -39,20 +39,22 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.1.18",
-    "babel-core": "^6.1.18",
+	"@babel/preset-env": "^7.15.0",
+    "@babel/register": "^7.14.5",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-preset-latest": "^6.24.1",
-    "babel-register": "^6.3.13",
-    "chai": "^3.5.0",
-    "component": "~0.10.1",
-    "eslint": "^2.6.0",
-    "eslint-config-airbnb": "^6.2.0",
+    "babel-register": "^6.26.0",
+    "chai": "^4.3.4",
+    "component": "~1.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-lite": "^1.0.4",
-    "eslint-plugin-react": "^4.2.3",
-    "jquery": "^2.2.3",
-    "jsdom": "^8.3.0",
-    "mocha": "~1.7.4",
-    "mocha-jsdom": "^1.1.0",
-    "mocha-phantomjs": "~1.1.1"
+    "eslint-plugin-react": "^7.24.0",
+    "jquery": "^3.6.0",
+    "jsdom": "^16.7.0",
+    "mocha": "~9.0.3",
+    "mocha-jsdom": "^2.0.0",
+    "mocha-phantomjs": "~4.1.0"
   }
 }
